# henkes_nya_schack

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Enums.h  GUI.cpp  GUI.h  WorkerThread.cpp  WorkerThread.h  loadMoveAttackPatterns.cpp  loadMoveAttackPatterns.h  main.cpp
